--- a/in_app_purchases/codelab_rebuild.yaml
+++ b/in_app_purchases/codelab_rebuild.yaml
@@ -100,6 +100,23 @@ steps:
           +    id "com.android.application" version "8.2.1" apply false
                id "org.jetbrains.kotlin.android" version "1.8.22" apply false
            }
+      - name: Patch app/android/app/build.gradle
+        path: steps/app/android/app/build.gradle
+        patch-u: |
+          --- b/in_app_purchases/step_00/app/android/app/build.gradle
+          +++ a/in_app_purchases/step_00/app/android/app/build.gradle
+          @@ -22,9 +22,8 @@ android {
+               defaultConfig {
+                   // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+                   applicationId = "com.example.dashclicker"
+          -        // You can update the following values to match your application needs.
+          -        // For more information, see: https://flutter.dev/to/review-gradle-config.
+          -        minSdk = flutter.minSdkVersion
+          +        // Per https://firebase.google.com/support/release-notes/android firebase_auth requires minSdk 23
+          +        minSdk = 23
+                   targetSdk = flutter.targetSdkVersion
+                   versionCode = flutter.versionCode
+                   versionName = flutter.versionName
       - name: Mkdir app/assets
         mkdir: steps/app/assets
       - name: Add app/assets/dash_old.png
