--- a/ffigen_codelab/step_07/pubspec.yaml
+++ b/ffigen_codelab/step_07/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ^3.7.0-236.0.dev
+  sdk: ^3.7.0-0
   flutter: '>=3.3.0'
 
 dependencies:
@@ -15,7 +15,7 @@ dependencies:
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
-  ffigen: ^16.0.0
+  ffigen: ^16.1.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
