--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -166,11 +166,7 @@ steps:
 
               // Define our triangle vertices
               const floatsPerVertex = 2;
-              final vertices = Float32List.fromList([
-                -0.5, -0.5, // First vertex
-                0.5, -0.5,  // Second vertex
-                0.0, 0.5,   // Third vertex
-              ]);
+              final vertices = Float32List.fromList([-0.5, -0.5, 0.5, -0.5, 0.0, 0.5]);
 
               // Create a GPU buffer for our vertices
               final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
@@ -366,7 +362,7 @@ steps:
                final vert = shaderLibrary['SimpleVertex'];
                if (vert == null) {
                  throw Exception('Failed to load SimpleVertex vertex shader');
-          @@ -63,18 +59,16 @@ class TrianglePainter extends CustomPainter {
+          @@ -63,14 +59,16 @@ class TrianglePainter extends CustomPainter {
                  throw Exception('Failed to load SimpleFragment fragment shader');
                }
            
@@ -375,22 +371,20 @@ steps:
            
           -    // Define our triangle vertices
           -    const floatsPerVertex = 2;
+          -    final vertices = Float32List.fromList([-0.5, -0.5, 0.5, -0.5, 0.0, 0.5]);
           +    const floatsPerVertex = 5; // Now 2 for position + 3 for color
-               final vertices = Float32List.fromList([
-          -      -0.5, -0.5, // First vertex
-          -      0.5, -0.5,  // Second vertex
-          -      0.0, 0.5,   // Third vertex
+          +    final vertices = Float32List.fromList([
           +      // Format: x, y, r, g, b
-          +      -0.5, -0.5, 1.0, 0.0, 0.0, // bottom left - red
-          +      0.5, -0.5, 0.0, 1.0, 0.0,  // bottom right - green
-          +      0.0, 0.5, 0.0, 0.0, 1.0,   // top - blue
-               ]);
+          +      -0.5, -0.5, 1.0, 0.0, 0.0,
+          +      0.5, -0.5, 0.0, 1.0, 0.0,
+          +      0.0, 0.5, 0.0, 0.0, 1.0,
+          +    ]);
            
           -    // Create a GPU buffer for our vertices
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
                  ByteData.sublistView(vertices),
                );
-          @@ -82,7 +76,6 @@ class TrianglePainter extends CustomPainter {
+          @@ -78,7 +76,6 @@ class TrianglePainter extends CustomPainter {
                  throw Exception('Failed to create vertices device buffer');
                }
            
@@ -398,7 +392,7 @@ steps:
                renderPass.bindPipeline(pipeline);
            
                final verticesView = gpu.BufferView(
-          @@ -95,10 +88,8 @@ class TrianglePainter extends CustomPainter {
+          @@ -91,10 +88,8 @@ class TrianglePainter extends CustomPainter {
                  vertices.length ~/ floatsPerVertex,
                );
            
@@ -457,7 +451,7 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_03/lib/main.dart
           +++ a/intro_flutter_gpu/step_03/lib/main.dart
-          @@ -61,12 +61,19 @@ class TrianglePainter extends CustomPainter {
+          @@ -61,12 +61,18 @@ class TrianglePainter extends CustomPainter {
            
                final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
            
@@ -467,15 +461,14 @@ steps:
                  // Format: x, y, r, g, b
           +
           +      // Triangle #1
-                 -0.5, -0.5, 1.0, 0.0, 0.0, // bottom left - red
-                 0.5, -0.5, 0.0, 1.0, 0.0,  // bottom right - green
-          -      0.0, 0.5, 0.0, 0.0, 1.0,   // top - blue
-          +      -0.5, 0.5, 0.0, 0.0, 1.0,  // top left - blue
-          +
+                 -0.5, -0.5, 1.0, 0.0, 0.0,
+                 0.5, -0.5, 0.0, 1.0, 0.0,
+          -      0.0, 0.5, 0.0, 0.0, 1.0,
+          +      -0.5, 0.5, 0.0, 0.0, 1.0,
           +      // Triangle #2
-          +      0.5, -0.5, 0.0, 1.0, 0.0,  // bottom right - green
-          +      0.5, 0.5, 1.0, 1.0, 0.0,   // top right - yellow
-          +      -0.5, 0.5, 0.0, 0.0, 1.0,  // top left - blue
+          +      0.5, -0.5, 0.0, 1.0, 0.0,
+          +      0.5, 0.5, 1.0, 1.0, 0.0,
+          +      -0.5, 0.5, 0.0, 0.0, 1.0,
                ]);
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
@@ -493,24 +486,23 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_04/lib/main.dart
           +++ a/intro_flutter_gpu/step_04/lib/main.dart
-          @@ -66,14 +66,14 @@ class TrianglePainter extends CustomPainter {
+          @@ -66,13 +66,13 @@ class TrianglePainter extends CustomPainter {
                  // Format: x, y, r, g, b
            
                  // Triangle #1
-          -      -0.5, -0.5, 1.0, 0.0, 0.0, // bottom left - red
-          -      0.5, -0.5, 0.0, 1.0, 0.0,  // bottom right - green
-          -      -0.5, 0.5, 0.0, 0.0, 1.0,  // top left - blue
-          +      -0.5, -0.5, 0.0, 0.0, 1.0, // bottom left - blue
-          +      0.5, -0.5, 1.0, 1.0, 0.0,  // bottom right - yellow
-          +      -0.5, 0.5, 1.0, 0.0, 0.0,  // top left - red
-           
+          -      -0.5, -0.5, 1.0, 0.0, 0.0,
+          -      0.5, -0.5, 0.0, 1.0, 0.0,
+          -      -0.5, 0.5, 0.0, 0.0, 1.0,
+          +      -0.5, -0.5, 0.0, 0.0, 1.0,
+          +      0.5, -0.5, 1.0, 1.0, 0.0,
+          +      -0.5, 0.5, 1.0, 0.0, 0.0,
                  // Triangle #2
-          -      0.5, -0.5, 0.0, 1.0, 0.0,  // bottom right - green
-          -      0.5, 0.5, 1.0, 1.0, 0.0,   // top right - yellow
-          -      -0.5, 0.5, 0.0, 0.0, 1.0,  // top left - blue
-          +      0.5, -0.5, 1.0, 1.0, 0.0,  // bottom right - yellow
-          +      0.5, 0.5, 0.0, 1.0, 0.0,   // top right - green
-          +      -0.5, 0.5, 1.0, 0.0, 0.0,  // top left - red
+          -      0.5, -0.5, 0.0, 1.0, 0.0,
+          -      0.5, 0.5, 1.0, 1.0, 0.0,
+          -      -0.5, 0.5, 0.0, 0.0, 1.0,
+          +      0.5, -0.5, 1.0, 1.0, 0.0,
+          +      0.5, 0.5, 0.0, 1.0, 0.0,
+          +      -0.5, 0.5, 1.0, 0.0, 0.0,
                ]);
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
@@ -528,7 +520,7 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_05/lib/main.dart
           +++ a/intro_flutter_gpu/step_05/lib/main.dart
-          @@ -61,19 +61,19 @@ class TrianglePainter extends CustomPainter {
+          @@ -61,18 +61,18 @@ class TrianglePainter extends CustomPainter {
            
                final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
            
@@ -539,20 +531,19 @@ steps:
           +      // Format: x, y, u, v
            
                  // Triangle #1
-          -      -0.5, -0.5, 0.0, 0.0, 1.0, // bottom left - blue
-          -      0.5, -0.5, 1.0, 1.0, 0.0,  // bottom right - yellow
-          -      -0.5, 0.5, 1.0, 0.0, 0.0,  // top left - red
-          +      -0.5, -0.5, 0.0, 0.0, // bottom left
-          +      0.5, -0.5, 1.0, 0.0,  // bottom right
-          +      -0.5, 0.5, 0.0, 1.0,  // top left
-           
+          -      -0.5, -0.5, 0.0, 0.0, 1.0,
+          -      0.5, -0.5, 1.0, 1.0, 0.0,
+          -      -0.5, 0.5, 1.0, 0.0, 0.0,
+          +      -0.5, -0.5, 0.0, 0.0,
+          +      0.5, -0.5, 1.0, 0.0,
+          +      -0.5, 0.5, 0.0, 1.0,
                  // Triangle #2
-          -      0.5, -0.5, 1.0, 1.0, 0.0,  // bottom right - yellow
-          -      0.5, 0.5, 0.0, 1.0, 0.0,   // top right - green
-          -      -0.5, 0.5, 1.0, 0.0, 0.0,  // top left - red
-          +      0.5, -0.5, 1.0, 0.0,  // bottom right
-          +      0.5, 0.5, 1.0, 1.0,   // top right
-          +      -0.5, 0.5, 0.0, 1.0,  // top left
+          -      0.5, -0.5, 1.0, 1.0, 0.0,
+          -      0.5, 0.5, 0.0, 1.0, 0.0,
+          -      -0.5, 0.5, 1.0, 0.0, 0.0,
+          +      0.5, -0.5, 1.0, 0.0,
+          +      0.5, 0.5, 1.0, 1.0,
+          +      -0.5, 0.5, 0.0, 1.0,
                ]);
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
@@ -615,7 +606,7 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_06/lib/main.dart
           +++ a/intro_flutter_gpu/step_06/lib/main.dart
-          @@ -61,19 +61,19 @@ class TrianglePainter extends CustomPainter {
+          @@ -61,18 +61,18 @@ class TrianglePainter extends CustomPainter {
            
                final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
            
@@ -623,23 +614,21 @@ steps:
           +    const floatsPerVertex = 4; // 2 for position + 2 for UV
                final vertices = Float32List.fromList([
                  // Format: x, y, u, v
-          -
-          +      
-                 // Triangle #1
-          -      -0.5, -0.5, 0.0, 0.0, // bottom left
-          -      0.5, -0.5, 1.0, 0.0,  // bottom right
-          -      -0.5, 0.5, 0.0, 1.0,  // top left
-          +      -0.8, -0.8, -1.0, -1.0, // bottom left
-          +      0.8, -0.8, 1.0, -1.0,   // bottom right
-          +      -0.8, 0.8, -1.0, 1.0,   // top left
            
+                 // Triangle #1
+          -      -0.5, -0.5, 0.0, 0.0,
+          -      0.5, -0.5, 1.0, 0.0,
+          -      -0.5, 0.5, 0.0, 1.0,
+          +      -0.8, -0.8, -1.0, -1.0,
+          +      0.8, -0.8, 1.0, -1.0,
+          +      -0.8, 0.8, -1.0, 1.0,
                  // Triangle #2
-          -      0.5, -0.5, 1.0, 0.0,  // bottom right
-          -      0.5, 0.5, 1.0, 1.0,   // top right
-          -      -0.5, 0.5, 0.0, 1.0,  // top left
-          +      0.8, -0.8, 1.0, -1.0,   // bottom right
-          +      0.8, 0.8, 1.0, 1.0,     // top right
-          +      -0.8, 0.8, -1.0, 1.0,   // top left
+          -      0.5, -0.5, 1.0, 0.0,
+          -      0.5, 0.5, 1.0, 1.0,
+          -      -0.5, 0.5, 0.0, 1.0,
+          +      0.8, -0.8, 1.0, -1.0,
+          +      0.8, 0.8, 1.0, 1.0,
+          +      -0.8, 0.8, -1.0, 1.0,
                ]);
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
@@ -771,7 +760,7 @@ steps:
            
              @override
              void paint(Canvas canvas, Size size) {
-          @@ -61,16 +98,12 @@ class TrianglePainter extends CustomPainter {
+          @@ -61,15 +98,12 @@ class TrianglePainter extends CustomPainter {
            
                final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
            
@@ -779,17 +768,16 @@ steps:
           +    const floatsPerVertex = 4;
                final vertices = Float32List.fromList([
                  // Format: x, y, u, v
-          -      
-          -      // Triangle #1
-                 -0.8, -0.8, -1.0, -1.0, // bottom left
-                 0.8, -0.8, 1.0, -1.0,   // bottom right
-                 -0.8, 0.8, -1.0, 1.0,   // top left
           -
+          -      // Triangle #1
+                 -0.8, -0.8, -1.0, -1.0,
+                 0.8, -0.8, 1.0, -1.0,
+                 -0.8, 0.8, -1.0, 1.0,
           -      // Triangle #2
-                 0.8, -0.8, 1.0, -1.0,   // bottom right
-                 0.8, 0.8, 1.0, 1.0,     // top right
-                 -0.8, 0.8, -1.0, 1.0,   // top left
-          @@ -83,6 +116,22 @@ class TrianglePainter extends CustomPainter {
+                 0.8, -0.8, 1.0, -1.0,
+                 0.8, 0.8, 1.0, 1.0,
+                 -0.8, 0.8, -1.0, 1.0,
+          @@ -82,6 +116,22 @@ class TrianglePainter extends CustomPainter {
                  throw Exception('Failed to create vertices device buffer');
                }
            
@@ -812,7 +800,7 @@ steps:
                renderPass.bindPipeline(pipeline);
            
                final verticesView = gpu.BufferView(
-          @@ -95,6 +144,14 @@ class TrianglePainter extends CustomPainter {
+          @@ -94,6 +144,14 @@ class TrianglePainter extends CustomPainter {
                  vertices.length ~/ floatsPerVertex,
                );
            
@@ -881,10 +869,10 @@ steps:
                final model = vm.Matrix4.rotationY(angle);
           +    final view = vm.Matrix4.translation(vm.Vector3(0.0, 0.0, -2.0));
           +    final projection = vm.makePerspectiveMatrix(
-          +      vm.radians(45),      // 45-degree field of view
-          +      size.aspectRatio,    // Screen aspect ratio
-          +      0.1,                 // Near clipping plane
-          +      100.0,               // Far clipping plane
+          +      vm.radians(45),
+          +      size.aspectRatio,
+          +      0.1,
+          +      100.0,
           +    );
            
           -    // Create uniform buffer with transformation matrix
@@ -934,12 +922,12 @@ steps:
           +    const floatsPerVertex = 6; // 3 for position + 3 for color
                final vertices = Float32List.fromList([
           -      // Format: x, y, u, v
-          -      -0.8, -0.8, -1.0, -1.0, // bottom left
-          -      0.8, -0.8, 1.0, -1.0,   // bottom right
-          -      -0.8, 0.8, -1.0, 1.0,   // top left
-          -      0.8, -0.8, 1.0, -1.0,   // bottom right
-          -      0.8, 0.8, 1.0, 1.0,     // top right
-          -      -0.8, 0.8, -1.0, 1.0,   // top left
+          -      -0.8, -0.8, -1.0, -1.0,
+          -      0.8, -0.8, 1.0, -1.0,
+          -      -0.8, 0.8, -1.0, 1.0,
+          -      0.8, -0.8, 1.0, -1.0,
+          -      0.8, 0.8, 1.0, 1.0,
+          -      -0.8, 0.8, -1.0, 1.0,
           +      // Format: x, y, z, r, g, b
           +
           +      // Back Face
@@ -992,7 +980,7 @@ steps:
                ]);
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
-          @@ -116,17 +158,15 @@ class TrianglePainter extends CustomPainter {
+          @@ -116,7 +158,6 @@ class TrianglePainter extends CustomPainter {
                  throw Exception('Failed to create vertices device buffer');
                }
            
@@ -1000,14 +988,8 @@ steps:
                final model = vm.Matrix4.rotationY(angle);
                final view = vm.Matrix4.translation(vm.Vector3(0.0, 0.0, -2.0));
                final projection = vm.makePerspectiveMatrix(
-          -      vm.radians(45),      // 45-degree field of view
-          -      size.aspectRatio,    // Screen aspect ratio
-          -      0.1,                 // Near clipping plane
-          -      100.0,               // Far clipping plane
-          +      vm.radians(45),
-          +      size.aspectRatio,
-          +      0.1,
-          +      100.0,
+          @@ -126,7 +167,6 @@ class TrianglePainter extends CustomPainter {
+                 100.0,
                );
            
           -    // Pack matrices into uniform buffer
