--- a/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
+++ b/adaptive_app/step_06/yt_cors_proxy/pubspec.yaml
@@ -3,11 +3,11 @@ description: A YouTube CORS Proxy Server.
 version: 1.0.0
 
 environment:
-  sdk: ^3.6.0-0
+  sdk: ^3.6.1
 
 dependencies:
   shelf: ^1.4.0
-  http: ^1.2.2
+  http: ^1.3.0
   shelf_cors_headers: ^0.1.5
 
 dev_dependencies:
