--- a/animations/codelab_rebuild.yaml
+++ b/animations/codelab_rebuild.yaml
@@ -1069,14 +1069,15 @@ steps:
       - name: Patch lib/main.dart
         path: quiz/lib/main.dart
         patch-u: |
-          --- a/animations/step_05/lib/main.dart
-          +++ b/animations/step_05/lib/main.dart
+          --- b/animations/step_05_b/lib/main.dart
+          +++ a/animations/step_05_b/lib/main.dart
           @@ -1,3 +1,4 @@
           +import 'package:animations/animations.dart';
            import 'package:flutter/material.dart';
            
            import 'home_screen.dart';
-          @@ -16,6 +17,15 @@ class MainApp extends StatelessWidget {
+          @@ -15,6 +16,15 @@ class MainApp extends StatelessWidget {
+                 debugShowCheckedModeBanner: false,
                  theme: ThemeData(
                    colorScheme: ColorScheme.fromSeed(seedColor: Colors.blue),
           +        pageTransitionsTheme: PageTransitionsTheme(
