--- a/ffigen_codelab/codelab_rebuild.yaml
+++ b/ffigen_codelab/codelab_rebuild.yaml
@@ -358,6 +358,30 @@ steps:
       - name: dart analyze
         path: ffigen_app
         dart: analyze --fatal-infos
+      - name: Patch android/settings.gradle
+        path: ffigen_app/example/android/settings.gradle
+        patch-u: |
+          --- b/boring_to_beautiful/step_01/android/settings.gradle
+          +++ a/boring_to_beautiful/step_01/android/settings.gradle
+          @@ -18,7 +18,7 @@ pluginManagement {
+           
+           plugins {
+               id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+          -    id "com.android.application" version "8.1.0" apply false
+          +    id "com.android.application" version "8.7.3" apply false
+               id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+           }
+      - name: Patch 
+        path: ffigen_app/example/android/gradle/wrapper/gradle-wrapper.properties
+        patch-u: |
+          --- b/boring_to_beautiful/step_01/android/gradle/wrapper/gradle-wrapper.properties
+          +++ a/boring_to_beautiful/step_01/android/gradle/wrapper/gradle-wrapper.properties
+          @@ -2,4 +2,4 @@ distributionBase=GRADLE_USER_HOME
+           distributionPath=wrapper/dists
+           zipStoreBase=GRADLE_USER_HOME
+           zipStorePath=wrapper/dists
+          -distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-all.zip
+          +distributionUrl=https\://services.gradle.org/distributions/gradle-8.12-all.zip
       - name: Build Windows app
         path: ffigen_app/example
         platforms: [ windows ]
