--- a/google-maps-in-flutter/codelab_rebuild.yaml
+++ b/google-maps-in-flutter/codelab_rebuild.yaml
@@ -149,6 +149,30 @@ steps:
       - name: flutter pub upgrade
         path: google_maps_in_flutter
         flutter: pub upgrade
+      - name: Patch android/settings.gradle
+        path: google_maps_in_flutter/android/settings.gradle
+        patch-u: |
+          --- b/boring_to_beautiful/step_01/android/settings.gradle
+          +++ a/boring_to_beautiful/step_01/android/settings.gradle
+          @@ -18,7 +18,7 @@ pluginManagement {
+           
+           plugins {
+               id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+          -    id "com.android.application" version "8.1.0" apply false
+          +    id "com.android.application" version "8.7.3" apply false
+               id "org.jetbrains.kotlin.android" version "1.8.22" apply false
+           }
+      - name: Patch 
+        path: google_maps_in_flutter/android/gradle/wrapper/gradle-wrapper.properties
+        patch-u: |
+          --- b/boring_to_beautiful/step_01/android/gradle/wrapper/gradle-wrapper.properties
+          +++ a/boring_to_beautiful/step_01/android/gradle/wrapper/gradle-wrapper.properties
+          @@ -2,4 +2,4 @@ distributionBase=GRADLE_USER_HOME
+           distributionPath=wrapper/dists
+           zipStoreBase=GRADLE_USER_HOME
+           zipStorePath=wrapper/dists
+          -distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-all.zip
+          +distributionUrl=https\://services.gradle.org/distributions/gradle-8.12-all.zip
       - name: build Android
         platforms: [ macos ]
         path: google_maps_in_flutter
@@ -1404,7 +1428,7 @@ steps:
              }
            
              @override
-          @@ -46,15 +58,16 @@ class _MyAppState extends State<MyApp> {
+          @@ -45,15 +57,16 @@ class _MyAppState extends State<MyApp> {
                  ),
                  home: Scaffold(
                    appBar: AppBar(
