--- a/namer/codelab_rebuild.yaml
+++ b/namer/codelab_rebuild.yaml
@@ -150,7 +150,7 @@ steps:
         patch-u: |
           --- b/namer/step_04_a_widget/lib/main.dart
           +++ a/namer/step_04_a_widget/lib/main.dart
-          @@ -37,8 +37,14 @@ class MyHomePage extends StatelessWidget {
+          @@ -36,8 +36,14 @@ class MyHomePage extends StatelessWidget {
                return Scaffold(
                  body: Column(
                    children: [
@@ -190,10 +190,10 @@ steps:
       - name: Add button behavior
         path: namer_app/lib/main.dart
         patch-u: |
-          --- a/namer_app/lib/main.dart
-          +++ b/namer_app/lib/main.dart
-          @@ -27,6 +27,11 @@ class MyApp extends StatelessWidget {
-
+          --- b/namer/step_04_b_behavior/lib/main.dart
+          +++ a/namer/step_04_b_behavior/lib/main.dart
+          @@ -26,6 +26,11 @@ class MyApp extends StatelessWidget {
+           
            class MyAppState extends ChangeNotifier {
              var current = WordPair.random();
           +
@@ -202,9 +202,9 @@ steps:
           +    notifyListeners();
           +  }
            }
-
+           
            class MyHomePage extends StatelessWidget {
-          @@ -41,7 +46,7 @@ class MyHomePage extends StatelessWidget {
+          @@ -40,7 +45,7 @@ class MyHomePage extends StatelessWidget {
                      Text(appState.current.asLowerCase),
                      ElevatedButton(
                        onPressed: () {
@@ -282,7 +282,7 @@ steps:
         patch-u: |
           --- b/namer/step_05_a_pair/lib/main.dart
           +++ a/namer/step_05_a_pair/lib/main.dart
-          @@ -38,12 +38,13 @@ class MyHomePage extends StatelessWidget {
+          @@ -37,12 +37,13 @@ class MyHomePage extends StatelessWidget {
              @override
              Widget build(BuildContext context) {
                var appState = context.watch<MyAppState>();
@@ -310,7 +310,7 @@ steps:
         patch-u: |
           --- b/namer/step_05_b_extract/lib/main.dart
           +++ a/namer/step_05_b_extract/lib/main.dart
-          @@ -44,7 +44,7 @@ class MyHomePage extends StatelessWidget {
+          @@ -43,7 +43,7 @@ class MyHomePage extends StatelessWidget {
                  body: Column(
                    children: [
                      Text('A random AWESOME idea:'),
@@ -319,7 +319,7 @@ steps:
                      ElevatedButton(
                        onPressed: () {
                          appState.getNext();
-          @@ -56,3 +56,17 @@ class MyHomePage extends StatelessWidget {
+          @@ -55,3 +55,17 @@ class MyHomePage extends StatelessWidget {
                );
              }
            }
@@ -372,7 +372,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -67,6 +67,11 @@ class BigCard extends StatelessWidget {
+          @@ -66,6 +66,11 @@ class BigCard extends StatelessWidget {
            
              @override
              Widget build(BuildContext context) {
@@ -398,7 +398,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -67,7 +67,10 @@ class BigCard extends StatelessWidget {
+          @@ -66,7 +66,10 @@ class BigCard extends StatelessWidget {
            
              @override
              Widget build(BuildContext context) {
@@ -422,7 +422,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -68,12 +68,15 @@ class BigCard extends StatelessWidget {
+          @@ -67,12 +67,15 @@ class BigCard extends StatelessWidget {
              @override
              Widget build(BuildContext context) {
                final theme = Theme.of(context);
@@ -452,7 +452,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -76,7 +76,11 @@ class BigCard extends StatelessWidget {
+          @@ -75,7 +75,11 @@ class BigCard extends StatelessWidget {
                  color: theme.colorScheme.primary,
                  child: Padding(
                    padding: const EdgeInsets.all(20),
@@ -478,7 +478,7 @@ steps:
         patch-u: |
           --- b/namer/step_05_g_center_vertical/lib/main.dart
           +++ a/namer/step_05_g_center_vertical/lib/main.dart
-          @@ -42,6 +42,7 @@ class MyHomePage extends StatelessWidget {
+          @@ -41,6 +41,7 @@ class MyHomePage extends StatelessWidget {
            
                return Scaffold(
                  body: Column(
@@ -499,7 +499,7 @@ steps:
         patch-u: |
           --- b/namer/step_05_h_center_horizontal/lib/main.dart
           +++ a/namer/step_05_h_center_horizontal/lib/main.dart
-          @@ -41,18 +41,20 @@ class MyHomePage extends StatelessWidget {
+          @@ -40,18 +40,20 @@ class MyHomePage extends StatelessWidget {
                var pair = appState.current;
            
                return Scaffold(
@@ -545,7 +545,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -45,8 +45,8 @@ class MyHomePage extends StatelessWidget {
+          @@ -44,8 +44,8 @@ class MyHomePage extends StatelessWidget {
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
@@ -582,7 +582,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -32,6 +32,17 @@ class MyAppState extends ChangeNotifier {
+          @@ -31,6 +31,17 @@ class MyAppState extends ChangeNotifier {
                current = WordPair.random();
                notifyListeners();
              }
@@ -613,7 +613,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -58,11 +58,16 @@ class MyHomePage extends StatelessWidget {
+          @@ -57,11 +57,16 @@ class MyHomePage extends StatelessWidget {
                      children: [
                        BigCard(pair: pair),
                        SizedBox(height: 10),
@@ -646,9 +646,9 @@ steps:
       - name: Add 'Like' button to UI
         path: namer_app/lib/main.dart
         patch-u: |
-          --- a/namer_app/lib/main.dart
-          +++ b/namer_app/lib/main.dart
-          @@ -51,6 +51,13 @@ class MyHomePage extends StatelessWidget {
+          --- b/namer/step_06_c_add_like_button/lib/main.dart
+          +++ a/namer/step_06_c_add_like_button/lib/main.dart
+          @@ -50,6 +50,13 @@ class MyHomePage extends StatelessWidget {
                var appState = context.watch<MyAppState>();
                var pair = appState.current;
            
@@ -662,7 +662,7 @@ steps:
                return Scaffold(
                  body: Center(
                    child: Column(
-          @@ -61,6 +68,14 @@ class MyHomePage extends StatelessWidget {
+          @@ -60,6 +67,14 @@ class MyHomePage extends StatelessWidget {
                        Row(
                          mainAxisSize: MainAxisSize.min,
                          children: [
@@ -722,7 +722,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -48,6 +48,43 @@
+          @@ -47,6 +47,43 @@
            class MyHomePage extends StatelessWidget {
              @override
              Widget build(BuildContext context) {
@@ -766,7 +766,7 @@ steps:
                var appState = context.watch<MyAppState>();
                var pair = appState.current;
            
-          @@ -58,34 +95,32 @@
+          @@ -57,34 +94,32 @@
                  icon = Icons.favorite_border;
                }
            
@@ -840,7 +840,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -45,7 +45,12 @@ class MyAppState extends ChangeNotifier {
+          @@ -44,7 +44,12 @@ class MyAppState extends ChangeNotifier {
              }
            }
            
@@ -867,7 +867,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -51,6 +51,8 @@
+          @@ -50,6 +50,8 @@
            }
 
            class _MyHomePageState extends State<MyHomePage> {
@@ -876,7 +876,7 @@ steps:
              @override
              Widget build(BuildContext context) {
                return Scaffold(
-          @@ -69,9 +71,11 @@
+          @@ -68,9 +70,11 @@
                              label: Text('Favorites'),
                            ),
                          ],
@@ -903,7 +903,7 @@ steps:
         patch-u: |
           --- b/namer/step_07_d_use_selectedindex/lib/main.dart
           +++ a/namer/step_07_d_use_selectedindex/lib/main.dart
-          @@ -55,6 +55,16 @@ class _MyHomePageState extends State<MyHomePage> {
+          @@ -54,6 +54,16 @@ class _MyHomePageState extends State<MyHomePage> {
            
              @override
              Widget build(BuildContext context) {
@@ -920,7 +920,7 @@ steps:
                return Scaffold(
                  body: Row(
                    children: [
-          @@ -82,7 +92,7 @@ class _MyHomePageState extends State<MyHomePage> {
+          @@ -81,7 +91,7 @@ class _MyHomePageState extends State<MyHomePage> {
                      Expanded(
                        child: Container(
                          color: Theme.of(context).colorScheme.primaryContainer,
@@ -942,7 +942,7 @@ steps:
         patch-u: |
           --- a/namer_app/lib/main.dart
           +++ b/namer_app/lib/main.dart
-          @@ -65,39 +65,41 @@
+          @@ -64,39 +64,41 @@
                    throw UnimplementedError('no widget for $selectedIndex');
                }
 
@@ -1027,7 +1027,7 @@ steps:
         patch-u: |
           --- b/namer/step_08/lib/main.dart
           +++ a/namer/step_08/lib/main.dart
-          @@ -60,7 +60,7 @@ class _MyHomePageState extends State<MyHomePage> {
+          @@ -59,7 +59,7 @@ class _MyHomePageState extends State<MyHomePage> {
                  case 0:
                    page = GeneratorPage();
                  case 1:
@@ -1036,7 +1036,7 @@ steps:
                  default:
                    throw UnimplementedError('no widget for $selectedIndex');
                }
-          @@ -175,3 +175,31 @@ class BigCard extends StatelessWidget {
+          @@ -174,3 +174,31 @@ class BigCard extends StatelessWidget {
                );
              }
            }
